--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -64,7 +64,7 @@ jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=com.tobiasschuerg.spheremenu.Main
+main.class=com.tobiasschuerg.spheremenu.SphereMenuExample
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
