--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,12 +31,21 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.guava-12.0.jar=libs/guava-12.0.jar
+file.reference.Lemur-javadoc.jar=libs/Lemur-javadoc.jar
+file.reference.Lemur.jar=libs/Lemur.jar
+file.reference.slf4j-api-1.7.5.jar=libs/slf4j-api-1.7.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.jme3.classpath}:\
     ${libs.jme3-libraries.classpath}:\
-    ${libs.jme3-test-data.classpath}
+    ${libs.jme3-test-data.classpath}:\
+    ${reference.LemurPieMenu.jar}:\
+    ${file.reference.Lemur-javadoc.jar}:\
+    ${file.reference.Lemur.jar}:\
+    ${file.reference.guava-12.0.jar}:\
+    ${file.reference.slf4j-api-1.7.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -69,6 +78,8 @@ meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
 platform.active=default_platform
+project.LemurPieMenu=../../jMonkey/LemurPieMenu
+reference.LemurPieMenu.jar=${project.LemurPieMenu}/dist/MyGame.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
