--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,8 +41,8 @@ javac.classpath=\
     ${libs.jme3.classpath}:\
     ${libs.jme3-libraries.classpath}:\
     ${libs.jme3-test-data.classpath}:\
-    ${reference.LemurPieMenu.jar}:\
     ${file.reference.Lemur-javadoc.jar}:\
+    ${reference.LemurPieMenu.jar}:\
     ${file.reference.Lemur.jar}:\
     ${file.reference.guava-12.0.jar}:\
     ${file.reference.slf4j-api-1.7.5.jar}
@@ -79,7 +79,7 @@ manifest.file=MANIFEST.MF
 mkdist.disabled=false
 platform.active=default_platform
 project.LemurPieMenu=../../jMonkey/LemurPieMenu
-reference.LemurPieMenu.jar=${project.LemurPieMenu}/dist/MyGame.jar
+reference.LemurPieMenu.jar=${project.LemurPieMenu}/dist/PieMenu.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
